# Random-Projects

./: .gitignore  README.md
LaserTag5000/: .classpath  .project  AndroidManifest.xml
headphonectl/: CMakeLists.txt  headphonectl.cpp  headphonectl.h  main.cpp  media.cpp  media.h  mode.cpp  mode.h  nullmode.cpp  nullmode.h  radiomode.cpp  radiomode.h  spotifymode.cpp  spotifymode.h  vlcmode.cpp  vlcmode.h
mobileirc/: Doxyfile  mobileirc.sln
mobileirc/installer/: installer.vddproj
mobileirc/src/: ChannelWidget.ui  LogWidget.ui  MainWindow.ui  NickDialog.ui  PasswordEntry.ui  channelbase.cpp  channelbase.h  channelmodel.cpp  channelmodel.h  channelwidget.cpp  channelwidget.h  commandedit.cpp  commandedit.h  logwidget.cpp  logwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  nickdialog.cpp  nickdialog.h  passworddialog.cpp  passworddialog.h  privatewidget.cpp  privatewidget.h  src.pro
mobileirc/templates/: cpp  h
netfs/: Doxyfile
netfs/src/: badfs.cpp  badfs.h  basefs.cpp  basefs.h  main.cpp  mapservice.cpp  mapservice.h  netclient.cpp  netclient.h  netfs.cpp  netfs.h  nullfs.cpp  nullfs.h  rpcthread.cpp  rpcthread.h  smbfs.cpp  smbfs.h  src.pro  symlinkfs.cpp  symlinkfs.h
netfs/templates/: cpp
ogreproject/: Doxyfile  ogreproject.pro
ogreproject/client/: ConsoleDialog.ui  TestForm.ui  agentitem.cpp  agentitem.h  application.cpp  application.h  client.pro  commandedit.cpp  commandedit.h  consoledialog.cpp  consoledialog.h  main.cpp  ogreqtoverlay.cpp  testform.cpp  testform.h
opencvtest/: Doxyfile
opencvtest/src/: main.cpp  (+5 more)
qxtirc/: Doxyfile  qxtirc.pro
(+116 files in other folders)
